--- a/Web.Statu/App_Code/Util.cshtml
+++ b/Web.Statu/App_Code/Util.cshtml
@@ -254,7 +254,7 @@ smartlook('init', '344e291cbee0b3c87748a78b80faf81d6e8628b1');";
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel">Oprava údajů</h4>
+                    <h4 class="modal-title" >Oprava údajů</h4>
                 </div>
                 <div class="modal-body">
                     <div class="loader2">Nahrávám formulář</div>
@@ -337,7 +337,7 @@ smartlook('init', '344e291cbee0b3c87748a78b80faf81d6e8628b1');";
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel">@title</h4>
+                    <h4 class="modal-title" >@title</h4>
                 </div>
                 <div class="modal-body">
                     <p style="font-size:14px;">
@@ -591,10 +591,10 @@ Máme pro vás denné sledovat <b>nové {dataTypeName} odpovídající tomuto do
                     <div class="modal-content">
                         <div class="modal-header">
                             <button type="button" onclick="ga('send', 'event', 'btnWatchDog', 'CloseBtnIcon', 'authenticated');" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                            <h4 class="modal-title" id="myModalLabel">Přidání nového hlídače</h4>
+                            <h4 class="modal-title" >Přidání nového hlídače</h4>
                         </div>
                         <div class="modal-body text-left">
-                            <p>
+                            <div>
                                 <div class="col-xs-12">
                                     <label for="txt" class="control-label">Pojmenování hlídače</label>
                                     <div>
@@ -648,8 +648,7 @@ Máme pro vás denné sledovat <b>nové {dataTypeName} odpovídající tomuto do
                                 {
                                     <input type="hidden" name="focus@(uid)" id="focus@(uid)" value="0">
                                 }
-                            </p>
-                            <p>&nbsp;</p>
+                            </div>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Zavřít</button>
@@ -675,7 +674,7 @@ Máme pro vás denné sledovat <b>nové {dataTypeName} odpovídající tomuto do
                     <div class="modal-content">
                         <div class="modal-header">
                             <button type="button" onclick="ga('send', 'event', 'btnWatchDog', 'CloseBtnIcon', 'authenticated');" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                            <h4 class="modal-title" id="myModalLabel">Musíte být přihlášeni</h4>
+                            <h4 class="modal-title" >Musíte být přihlášeni</h4>
                         </div>
                         <div class="modal-body">
                             <p>
@@ -1048,7 +1047,7 @@ Máme pro vás denné sledovat <b>nové {dataTypeName} odpovídající tomuto do
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel">@title</h4>
+                    <h4 class="modal-title" >@title</h4>
                 </div>
                 <div class="modal-body">
                     <p>
