--- a/Web.Statu/Views/Manage/Index.cshtml
+++ b/Web.Statu/Views/Manage/Index.cshtml
@@ -29,7 +29,7 @@
                         <div class="modal-content">
                             <div class="modal-header">
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                <h4 class="modal-title" id="myModalLabel">Jak přidat nového hlídače</h4>
+                                <h4 class="modal-title" >Jak přidat nového hlídače</h4>
                             </div>
                             <div class="modal-body">
                                 <p><code>Hlídač nových smluv</code> nebo <code>Hlídač veřejných zakázek</code> je jednoduše vyhledávací dotaz, který se spustí vždy po vložení nových smluv.</p>
