--- a/Web.Statu/Views/Manage/Zalozky.cshtml
+++ b/Web.Statu/Views/Manage/Zalozky.cshtml
@@ -14,7 +14,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title" id="myModalLabel">Uložené záložky</h4>
+                    <h4 class="modal-title" >Uložené záložky</h4>
                 </div>
                 <div class="modal-body">
                     <p>
