--- a/Web.Statu/Views/Home/_PolitikDisclaimer.cshtml
+++ b/Web.Statu/Views/Home/_PolitikDisclaimer.cshtml
@@ -25,7 +25,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">Podrobnější vysvětlení</h4>
+                <h4 class="modal-title" >Podrobnější vysvětlení</h4>
             </div>
             <div class="modal-body">
                 <h4>Proč nás zajímají neaktuální vazby politiků a dalších osob?</h4>
