--- a/Web.Statu/Views/Home/_SearchFormHelp.cshtml
+++ b/Web.Statu/Views/Home/_SearchFormHelp.cshtml
@@ -4,7 +4,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">Nápověda k hledání</h4>
+                <h4 class="modal-title" >Nápověda k hledání</h4>
             </div>
             <div class="modal-body">
                 @Html.Partial("~/Views/Home/_SearchFormHelpContent.cshtml")
