--- a/Web.Statu/Views/Manage/Watchdogs.cshtml
+++ b/Web.Statu/Views/Manage/Watchdogs.cshtml
@@ -11,7 +11,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title" id="myModalLabel">Jak přidat nového hlídače</h4>
+                    <h4 class="modal-title" >Jak přidat nového hlídače</h4>
                 </div>
                 <div class="modal-body">
                     <p><code>Hlídač nových smluv</code> je jednoduše vyhledávací dotaz, který se spustí vždy po vložení nových smluv.</p>
