--- a/Web.Statu/Views/Data/ImportData.cshtml
+++ b/Web.Statu/Views/Data/ImportData.cshtml
@@ -196,10 +196,10 @@ else
                         <tr>
                             <th> </th>
                             <th>
-                                Název sloupce v CSV
+                                Jméno cílového sloupce v datasetu
                             </th>
                             <th>
-                                Jméno cílového sloupce v datasetu
+                                Název sloupce v CSV, odkud bereme data
                             </th>
                             <th>Transformace dat</th>
                         </tr>
