--- a/Web.Statu/Views/Data/NoAccess.cshtml
+++ b/Web.Statu/Views/Data/NoAccess.cshtml
@@ -16,8 +16,7 @@
         <li><a href="/">Hlídač Státu</a></li>
         <li><a href="/data">Datové zdroje</a></li>
         <li class="active">@ViewBag.Title</li>
-        <li class="active pull-right"><a onclick="return trackOutLink(this,'data');" href="https://hlidacstatu.docs.apiary.io/#reference/datasety-rozsirene-datove-sady-hlidace-statu">Přidat další datový zdroj (pro programátory)</a></li>
-    </ol>
+        <li class="active pull-right"><a href="/data/manage" class="btn btn-primary btn-sm" style="color:whitesmoke;text-decoration:none">Snadné přidání nového datasetu</a></li>    </ol>
 }
 
 <div class="row">
