--- a/Web.Statu/Views/Data/Edit.cshtml
+++ b/Web.Statu/Views/Data/Edit.cshtml
@@ -46,7 +46,7 @@
         <li><a href="/data">Datové zdroje</a></li>
         <li><a href="@dataset.DatasetUrl()">@Model.name</a></li>
         <li class="active">Editace parametrů</li>
-        <li class="active pull-right"><a href="https://hlidacstatu.docs.apiary.io/#reference/datasety-rozsirene-datove-sady-hlidace-statu">Přidat další datový zdroj (pro programátory)</a></li>
+        <li class="active pull-right"><a href="/data/manage" class="btn btn-primary btn-sm" style="color:whitesmoke;text-decoration:none">Snadné přidání nového datasetu</a></li>
     </ol>
 }
 <div class="row">
