--- a/Web.Statu/Views/Data/Hledat.cshtml
+++ b/Web.Statu/Views/Data/Hledat.cshtml
@@ -32,7 +32,7 @@
         <li><a href="/data">Datové zdroje</a></li>
         <li><a href="@Model.DataSet.DatasetUrl()">@registration.name</a></li>
         <li class="active">@ViewBag.SubTitle</li>
-        <li class="active pull-right"><a href="https://hlidacstatu.docs.apiary.io/#reference/datasety-rozsirene-datove-sady-hlidace-statu">Přidat další datový zdroj (pro programátory)</a></li>
+        <li class="active pull-right"><a href="/data/manage" class="btn btn-primary btn-sm" style="color:whitesmoke;text-decoration:none">Snadné přidání nového datasetu</a></li>
     </ol>
 }
 <div class="row">
