--- a/Web.Statu/Views/Data/TechnickeInfo.cshtml
+++ b/Web.Statu/Views/Data/TechnickeInfo.cshtml
@@ -45,7 +45,7 @@
         <li><a href="/data">Datové zdroje</a></li>
         <li><a href="@Model.DatasetUrl()">@reg.name</a></li>
         <li class="active">Technické informace</li>
-        <li class="active pull-right"><a href="https://hlidacstatu.docs.apiary.io/#reference/datasety-rozsirene-datove-sady-hlidace-statu">Přidat další datový zdroj (pro programátory)</a></li>
+        <li class="active pull-right"><a href="/data/manage" class="btn btn-primary btn-sm" style="color:whitesmoke;text-decoration:none">Snadné přidání nového datasetu</a></li>
     </ol>
     }
     <div id="data-detail-content">
