--- a/Web.Statu/Views/Data/Manage.cshtml
+++ b/Web.Statu/Views/Data/Manage.cshtml
@@ -39,7 +39,7 @@
             <p>@Model.description </p>
         </div>
         <div class="col-xs-12 col-sm-4">
-            <a href="/data/edit/@Model.id" class="btn btn-default"><i class="far fa-cog"></i> Editovat parametry datasetu</a>
+            <a href="/data/edit/@Model.id" class="btn btn-primary"><i class="far fa-cog"></i> Editovat parametry datasetu</a>
             <p class="text-info">
                 Změna parametrů datasetu (templaty, popisy, viditelnost a další). Nemá žádný vliv na data.
                 Pozor: Není možné změnit ID datasetu a JSON schéma. Pokud je chcete změnit, musíte dataset smazat a založit znovu.
