--- a/Web.Statu/Views/Shared/_Layout.cshtml
+++ b/Web.Statu/Views/Shared/_Layout.cshtml
@@ -137,7 +137,6 @@
 
 
     @Styles.Render("~/Content/css")
-    <link href="/Content/new.css" rel="stylesheet">
 
     @Scripts.Render("~/bundles/modernizr")
 
@@ -229,13 +228,12 @@
 
             <ul>
                 <li class="navbar__watchers">
-                    <span class="watcher">Hlídače:</span>
-                    <a href="/smlouvy">Smluv</a>
-                    <a href="/osoby">Osob</a>
-                    <a href="/ucty">Financí</a>
-                    <a href="/VerejneZakazky">Veřejných zakázek</a>
-                    <a href="/StatniWeby">Webů</a>
-                    @*<a href="/Insolvence">Insolvencí</a>*@
+                    <a href="/smlouvy">Smluvy</a>
+                    <a href="/osoby">Osoby</a>
+                    <a href="/sponzori">Sponzoři</a>
+                    <a href="/VerejneZakazky">Veřejné zakázky</a>
+                    @*<a href="/Insolvence">Insolvence</a>*@
+                    <a href="/StatniWeby">Weby</a>
                 </li>
 
                 <li class="hidden-sm hidden-xs">
