--- a/Web.Statu/Content/GlobalSite.v1.5.css
+++ b/Web.Statu/Content/GlobalSite.v1.5.css
@@ -1470,6 +1470,7 @@ div.verticaltab-container {
     border: 1px solid #ddd;
     border-bottom-color: transparent;
     font-size: 16px;
+    font-weight: bold;
 }
 
 .nav-tabs.border > li.active > a, .nav-tabs.border > li.active > a:hover, .nav-tabs.border > li.active > a:focus {
@@ -1513,3 +1514,52 @@ div.verticaltab-container {
     line-height: 1.5;
     border-radius: 3px;
 }
+
+
+.logo strong {
+    font-weight: 700;
+    color: #266cae;
+}
+
+
+.table.bankovnivypis td.small {
+    font-size: 80%;
+    color: #777;
+    border-top-width: 0 !important;
+}
+
+.bookmark, .bookmark:active, .bookmark:visited, .bookmark:focus, .bookmark:hover { /* z glyphicon glyphicon-star */
+    position: relative;
+    top: 1px;
+    display: inline-block;
+    font-family: 'Glyphicons Halflings' !important;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-size: 120%;
+    text-decoration: none;
+}
+
+    .bookmark:hover {
+        filter: brightness(85%);
+    }
+
+    .bookmark.bookmarkOn {
+        color: #c9302c;
+    }
+
+        .bookmark.bookmarkOn:before {
+            content: "\e044";
+        }
+
+    .bookmark.bookmarkOff {
+        color: #96C0E5;
+    }
+
+        .bookmark.bookmarkOff:before {
+            content: "\e044";
+        }
+
+
