--- a/Web.Statu/Views/Sponzori/Top_child.cshtml
+++ b/Web.Statu/Views/Sponzori/Top_child.cshtml
@@ -6,27 +6,18 @@
 @using HlidacStatu.Web.Framework
 
 @{
+    Layout = null;
+
+    ViewBag.Title = "Největší sponzoři politických stran";
+    ViewBag.SubTitle = "za posledních 10 let";
+
     ViewBag.ShowBookmarkUrl = true;
-    string strana = ViewBag.Strana;
-    int? rok = ViewBag.Rok;
 
 }
 @section scripts
 {
     <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.12/css/jquery.dataTables.css">
     <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.12/js/jquery.dataTables.js"></script>
-}
-
-
-@section breadcrumb
-{
-    <ol class="breadcrumb">
-        <li><a href="/">Hlídač Státu</a></li>
-        <li><a href="/sponzori">Sponzoři</a></li>
-        @Util.IfExists(!string.IsNullOrEmpty(strana), $"<li><a href='{HlidacStatu.Lib.Data.Sponsors.GetStranaUrl(strana)}'>{strana}</a></li>")
-        @Util.IfExists(rok.HasValue, $"<li>{rok}</li>")
-        <li class="active">@ViewBag.Title</li>
-    </ol>
 }
 
 <div class="row">
@@ -79,6 +70,6 @@
 
     </div>
 
-</div>
 
-@Util.FeedbackModal("Poslat opravu či připomínku")
+
+</div>
