--- a/Web.Statu/Views/Ucty/Prezidenti.cshtml
+++ b/Web.Statu/Views/Ucty/Prezidenti.cshtml
@@ -29,7 +29,7 @@
 {
     <ol class="breadcrumb">
         <li><a href="/">Hlídač Státu</a></li>
-        <li><a href="/ucty">Hlídač financí</a></li>
+        <li><a href="/sponzori">Sponzoři</a></li>
         <li class="active">@ViewBag.Title</li>
     </ol>
     }
